chore(ark): expose query port

--- a/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
@@ -56,8 +56,8 @@ spec:
             protocol: udp
       query:
         enabled: true
-        # loadBalancerIP: $ARK_IP}
-        # type: LoadBalancer
+        loadBalancerIP: ${ARK_IP}
+        type: LoadBalancer
         ports:
           query:
             enabled: true
