--- a/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: arksurvivalevolved
-      version: 10.0.5
+      version: 10.0.6
       sourceRef:
         kind: HelmRepository
         name: truecharts
@@ -91,6 +91,8 @@ spec:
 
     persistence:
       backup:
+        enabled: true
+        mountPath: /ark/backup
         volsync:
            - name: b2
              type: restic
