chore(ark): add some mods

--- a/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
@@ -127,7 +127,12 @@ spec:
                enabled: true
 
     ark:
-      mods: []
+      mods:
+        - 1404697612 # Awesome Spyglass
+        - 1565015734 # Kraken's Better Dinos
+        - 731604991 # Structures Plus (S+)
+        - 1449927867 # Phoenix: Reborn From the Ashes
+        - 2881730367 # Fjördur Plus
 
     resources:
        limits:
