--- a/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
@@ -82,7 +82,7 @@ spec:
                ## Free RealEstate
                am_arkopt_clusterid: "TrueCharts-Ark"
                am_ark_SessionName: "TrueCharts-Ark"
-               am_serverMap: "Fjordur"
+               am_serverMap: "Ragnarok"
                am_ark_MaxPlayers: "10"
                am_ark_ServerPassword: ${ARK_PASSWORD}
                am_ark_RCONEnabled: "True"
@@ -132,7 +132,32 @@ spec:
         - 1565015734 # Kraken's Better Dinos
         - 731604991 # Structures Plus (S+)
         - 1449927867 # Phoenix: Reborn From the Ashes
-        - 2881730367 # Fjördur Plus
+        - 2820647244 # Fjordur Dinos Everywhere
+        - 2824091110 # Lost Island Dinos Everywhere
+        - 3037257184 # Deinonychus Everywhere
+        - 2984407853 # Rhynio Everywhere
+        - 3087251245 # Crystal Isles Everywhere
+        - 3373759210 # Scorched Earth Content Everywhere
+        - 2024119790 # Cross-Genesis1
+        - 2772103182 # Cross-Genesis2
+        - 1814953878 # Castles, Keeps, and Forts Remastered
+        - 2121156303 # Castles, Keeps, and Forts: Science Fiction
+        - 569786012 # Meat Spoiler
+        - 899250777 # Utilities Plus (unlimited-use stuff)
+        - 924933745 # Dino Tracker
+        - 898049820 # Auction House v4.0.3a
+        - 1091147617 # eco's Stable Structures and Decor
+        - 2795947433 # eco's Highland Homes
+        - 670764308 # eco Trees
+        - 816908578 # eco's Tek Decor
+        - 902548451 # eco's Shoppe Decor
+        - 880887081 # eco's Terrariums
+        - 880871931 # eco's Garden Decor
+        - 761981583 # Landscape Blocks
+
+
+## deprecated
+        #- 2881730367 # Fjördur Plus
 
     resources:
        limits:
