chore(arksurvivalevolved): move to latest container

--- a/charts/stable/arksurvivalevolved/values.yaml
+++ b/charts/stable/arksurvivalevolved/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: docker.io/drpsychick/arkserver
-  tag: latest-v1.6.62
+  tag: latest
 securityContext:
   pod:
     fsGroup: 1001
