--- a/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: arksurvivalevolved
-      version: 10.0.10
+      version: 10.0.11
       sourceRef:
         kind: HelmRepository
         name: truecharts
@@ -131,6 +131,7 @@ spec:
         - 1404697612 # Awesome Spyglass
         - 1565015734 # Kraken's Better Dinos
         - 731604991 # Structures Plus (S+)
+        - 821530042 # Upgrade Station v1.8i
         - 1449927867 # Phoenix: Reborn From the Ashes
         - 2820647244 # Fjordur Dinos Everywhere
         - 2824091110 # Lost Island Dinos Everywhere
