--- a/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/ark/app/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: arksurvivalevolved
-      version: 10.0.16
+      version: 10.0.18
       sourceRef:
         kind: HelmRepository
         name: truecharts
@@ -128,33 +128,33 @@ spec:
 
     ark:
       mods:
-        - 1404697612 # Awesome Spyglass
-        - 1565015734 # Kraken's Better Dinos
-        - 731604991 # Structures Plus (S+)
-        - 821530042 # Upgrade Station v1.8i
-        - 1449927867 # Phoenix: Reborn From the Ashes
-        - 2820647244 # Fjordur Dinos Everywhere
-        - 2824091110 # Lost Island Dinos Everywhere
-        - 3037257184 # Deinonychus Everywhere
-        - 2984407853 # Rhynio Everywhere
-        - 3087251245 # Crystal Isles Everywhere
-        - 3373759210 # Scorched Earth Content Everywhere
-        - 2024119790 # Cross-Genesis1
-        - 2772103182 # Cross-Genesis2
-        - 1814953878 # Castles, Keeps, and Forts Remastered
-        - 2121156303 # Castles, Keeps, and Forts: Science Fiction
-        - 569786012 # Meat Spoiler
-        - 899250777 # Utilities Plus (unlimited-use stuff)
-        - 924933745 # Dino Tracker
-        - 898049820 # Auction House v4.0.3a
-        - 1091147617 # eco's Stable Structures and Decor
-        - 2795947433 # eco's Highland Homes
-        - 670764308 # eco Trees
-        - 816908578 # eco's Tek Decor
-        - 902548451 # eco's Shoppe Decor
-        - 880887081 # eco's Terrariums
-        - 880871931 # eco's Garden Decor
-        - 761981583 # Landscape Blocks
+        - "1404697612" # Awesome Spyglass
+        - "1565015734" # Kraken's Better Dinos
+        - "731604991" # Structures Plus (S+)
+        - "821530042" # Upgrade Station v1.8i
+        - "1449927867" # Phoenix: Reborn From the Ashes
+        - "2820647244" # Fjordur Dinos Everywhere
+        - "2824091110" # Lost Island Dinos Everywhere
+        - "3037257184" # Deinonychus Everywhere
+        - "2984407853" # Rhynio Everywhere
+        - "3087251245" # Crystal Isles Everywhere
+        - "3373759210" # Scorched Earth Content Everywhere
+        - "2024119790" # Cross-Genesis1
+        - "2772103182" # Cross-Genesis2
+        - "1814953878" # Castles, Keeps, and Forts Remastered
+        - "2121156303" # Castles, Keeps, and Forts: Science Fiction
+        - "569786012" # Meat Spoiler
+        - "899250777" # Utilities Plus (unlimited-use stuff)
+        - "924933745" # Dino Tracker
+        - "898049820" # Auction House v4.0.3a
+        - "1091147617" # eco's Stable Structures and Decor
+        - "2795947433" # eco's Highland Homes
+        - "670764308" # eco Trees
+        - "816908578" # eco's Tek Decor
+        - "902548451" # eco's Shoppe Decor
+        - "880887081" # eco's Terrariums
+        - "880871931" # eco's Garden Decor
+        - "761981583" # Landscape Blocks
 
 
 ## deprecated
