Update Scanner.Schedule configuration option for Navidrome >=v0.55.0
As documented in their v0.55.0 release here
https://github.com/navidrome/navidrome/releases/tag/v0.55.0

--- a/charts/stable/navidrome/values.yaml
+++ b/charts/stable/navidrome/values.yaml
@@ -9,7 +9,7 @@ workload:
         main:
           env:
             ND_MUSICFOLDER: /music
-            ND_SCANSCHEDULE: "@every 15m"
+            ND_SCANNER_SCHEDULE: "@every 15m"
             ND_LOGLEVEL: info
             ND_SESSIONTIMEOUT: 24h
             ND_ENABLETRANSCODINGCONFIG: false
