--- a/charts/system/kubernetes-reflector/values.yaml
+++ b/charts/system/kubernetes-reflector/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: docker.io/emberstack/kubernetes-reflector
+  repository: ghcr.io/emberstack/kubernetes-reflector
   pullPolicy: IfNotPresent
-  tag: build-7.1.217@sha256:982b8fc714349abe480a6864f3c3fce8e8801fd5068fac6add5b22ed32efc033
+  tag: 9.1.6@sha256:34224d25442c71b0cefbeaac0bbf3c87108acc148226ba362cfdcc0af7c6aced
 operator:
   register: true
 
@@ -53,16 +53,16 @@ workload:
           probes:
             liveness:
               type: http
-              path: /healthz
-              port: 25080
+              path: /health/ready
+              port: 8080
             readiness:
               type: http
-              path: /healthz
-              port: 25080
+              path: /health/ready
+              port: 8080
             startup:
               type: http
-              path: /healthz
-              port: 25080
+              path: /health/ready
+              port: 8080
 service:
   main:
     enabled: false
