test common for newer k3s versions

--- a/.github/workflows/common-tests.yaml
+++ b/.github/workflows/common-tests.yaml
@@ -130,7 +130,8 @@ jobs:
         # We test the latest k3s version and the lowest supported by either the oldest supported SCALE or FluxCD release
         k3s-version:
           - v1.26
-          - v1.29
+          - v1.32
+          - latest
         # We test the latest k3s version and the lowest supported by either the oldest supported SCALE or FluxCD release
         helm-version:
           - v3.14.0
