--- a/charts/stable/external-dns/values.yaml
+++ b/charts/stable/external-dns/values.yaml
@@ -17,6 +17,7 @@ externaldns:
   policy: ""
   piholeServer: ""
   piholePassword: ""
+  piholeAPIVersion: ""
   triggerLoopOnEvent: "false"
   txtOwnerId: ""
   txtPrefix: ""
