--- a/clusters/main/kubernetes/apps/minecraft/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/minecraft/app/helm-release.yaml
@@ -177,7 +177,7 @@ spec:
                # CF_PARALLEL_DOWNLOADS
                # CF_SET_LEVEL_FROM
            mcbackup:
-             enabled: false
+             enabled: true
 
     persistence:
      data:
