--- a/charts/stable/appdaemon/values.yaml
+++ b/charts/stable/appdaemon/values.yaml
@@ -31,7 +31,7 @@ workload:
               type: http
               path: /
           env:
-            DASH_URL: "`http://0.0.0.0:5050"
+            DASH_URL: "http://0.0.0.0:5050"
             HA_URL: "ha-url"
             LATITUDE: 46
             LONGITUDE: -94
