--- a/charts/stable/sabnzbd/values.yaml
+++ b/charts/stable/sabnzbd/values.yaml
@@ -23,6 +23,16 @@ workload:
     podSpec:
       containers:
         main:
+          probes:
+            liveness:
+              port: "{{ .Values.service.main.ports.main.port }}"
+              path: /api?mode=version
+            readiness:
+              port: "{{ .Values.service.main.ports.main.port }}"
+              path: /api?mode=version
+            startup:
+              port: "{{ .Values.service.main.ports.main.port }}"
+              path: /api?mode=version
           env:
             SABNZBD__HOST_WHITELIST_ENTRIES: ""
             SABNZBD__PORT: "{{ .Values.service.main.ports.main.port }}"
