--- a/charts/premium/kubernetes-dashboard/values.yaml
+++ b/charts/premium/kubernetes-dashboard/values.yaml
@@ -161,6 +161,7 @@ workload:
           args:
             - --namespace={{ .Release.Namespace }}
             - --metrics-scraper-service-name=kubernetes-dashboard-scraper
+            - --sidecar-host=http://kubernetes-dashboard-scraper.{{ .Release.Namespace }}.svc.cluster.local:8000
           env:
             CSRF_KEY:
               secretKeyRef:
