--- a/charts/premium/kubernetes-dashboard/values.yaml
+++ b/charts/premium/kubernetes-dashboard/values.yaml
@@ -161,7 +161,7 @@ workload:
           args:
             - --namespace={{ .Release.Namespace }}
             - --metrics-scraper-service-name=kubernetes-dashboard-scraper
-            - --sidecar-host=http://kubernetes-dashboard-scraper.{{ .Release.Namespace }}.svc.cluster.local:8000
+            - --sidecar-host='{{ printf "http://%n:%p" (include "tc.v1.common.lib.chart.names.fullname" $) .Values.service.kubernetes-dashboard-api.ports.api.port }}'
           env:
             CSRF_KEY:
               secretKeyRef:
