--- a/website/package.json
+++ b/website/package.json
@@ -22,7 +22,7 @@
     "@astrojs/starlight": "0.34.3",
     "@astrojs/starlight-tailwind": "4.0.1",
     "tailwindcss": "4.1.10",
-    "@astrojs/tailwind": "6.0.2",
+    "@tailwindcss/vite": "4.1.10"
     "@playform/compress": "0.2.0",
     "astro": "5.9.3",
     "astro-better-image-service": "2.1.6",
