--- a/clustertool/embed/generic/kubernetes/system/openebs/app/helm-release.yaml
+++ b/clustertool/embed/generic/kubernetes/system/openebs/app/helm-release.yaml
@@ -42,3 +42,8 @@ spec:
         # The Mayastor backend contains a duplicate of snapshot controller which will cause conflicts
         mayastor:
           enabled: false
+    
+    loki:
+      enabled: false
+    alloy:
+      enabled: false
