--- a/charts/incubator/dumbassets/Chart.yaml
+++ b/charts/incubator/dumbassets/Chart.yaml
@@ -7,7 +7,7 @@ annotations:
   truecharts.org/category: Tools-Utilities
   truecharts.org/max_helm_version: "3.17"
   truecharts.org/min_helm_version: "3.14"
-  truecharts.org/train: stable
+  truecharts.org/train: incubator
 apiVersion: v2
 appVersion: 1.0.11
 dependencies:
