--- a/charts/stable/home-assistant/values.yaml
+++ b/charts/stable/home-assistant/values.yaml
@@ -143,5 +143,5 @@ securityContext:
     runAsGroup: 0
     capabilities:
       add:
-        - CAP_NET_RAW
-        - CAP_NET_BIND_SERVICE
+        - NET_RAW
+        - NET_BIND_SERVICE
